      
    * ``reconfigure`` can safely be interrupted while fetching.
      (Aaron Bentley, #179316)

    * ``reconfigure`` preserves tags when converting to and from lightweight
      checkouts.  (Aaron Bentley, #182040)

    * Unknown hostnames when connecting to a ``bzr://`` URL no longer cause
      tracebacks.  (Andrew Bennetts, #182849)

  API BREAKS:

    * Classes implementing Merge types like Merge3Merger must now accept (and
      honour) a do_merge flag in their constructor.  (Aaron Bentley)

  TESTING:

   * selftest now accepts --load-list <file> to load a test id list. This
     speeds up running the test suite on a limited set of tests.
     (Vincent Ladeuil)

  INTERNALS:

    * Add a new method ``get_result`` to graph search objects. The resulting
      ``SearchResult`` can be used to recreate the search later, which will
      be useful in reducing network traffic. (Robert Collins)

    * Fetching now passes the find_ghosts flag through to the 
      ``InterRepository.missing_revision_ids`` call consistently for all
      repository types. This will enable faster missing revision discovery with
      bzr+ssh. (Robert Collins)

    * ``InterRepository.missing_revision_ids`` is now deprecated in favour of
      ``InterRepository.search_missing_revision_ids`` which returns a 
      ``bzrlib.graph.SearchResult`` suitable for making requests from the smart
      server. (Robert Collins)
 
    * New method ``iter_inventories`` on Repository for access to many
      inventories. This is primarily used by the ``revision_trees`` method, as
      direct access to inventories is discouraged. (Robert Collins)
 
    * New method ``next_with_ghosts`` on the Graph breadth-first-search objects
      which will split out ghosts and present parents into two separate sets,
      useful for code which needs to be aware of ghosts (e.g. fetching data
      cares about ghosts during revision selection). (Robert Collins)
 